feat: styling registration

--- a/TRABALHOWEB/src/style.css
+++ b/TRABALHOWEB/src/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     margin: 0;
     box-sizing: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -15,32 +16,9 @@ body {
     --webkit-font-smoothing: antialiased;
 }
 
-body,
-input,
-textarea,
-button {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: 700;
-}
-
 button {
     cursor: pointer;
 }
-
-[disabled] {
-    opacity: 0.6;
-    cursor: not-allowed;
-}
-
 
 .input-container {
     display: flex;
@@ -54,6 +32,7 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 10px;
 }
 
 
@@ -65,6 +44,7 @@ button {
 
 .login-h1 {
     color: var(--primary-blue);
+    font-weight: bold;
 }
 
 .login-p {
@@ -73,9 +53,10 @@ button {
 }
 
 .btn-primary {
-    color: var(--primary-blue);
+    color: var(--white);
     width: 100%;
     margin-top: 1rem;
+    font-weight: bold;
 }
 
 .form-control {
