--- a/TRABALHOWEB/src/style.css
+++ b/TRABALHOWEB/src/style.css
@@ -13,7 +13,7 @@
 
 body {
     background: var(--background-color);
-    --webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
 }
 
 button {
@@ -34,7 +34,6 @@ button {
     transform: translate(-50%, -50%);
     border-radius: 10px;
 }
-
 
 .input-group {
     display: flex;
@@ -62,6 +61,7 @@ button {
 .form-control {
     margin-top: 1rem;
     position: relative;
+    text-indent: 1rem; 
 }
 
 .form-control::placeholder {
