--- a/TRABALHOWEB/src/style.css
+++ b/TRABALHOWEB/src/style.css
@@ -2,6 +2,7 @@
     --primary-blue: #3E37F7;
     --white: #fff;
     --gray: #909090;
+    --red: #FF0000;
 }
 
 * {
@@ -71,7 +72,7 @@ button {
 
 i {
     font-size: 1rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     color: var(--gray);
 }
 
@@ -91,7 +92,6 @@ i {
     border: 0;
 }
 
-
 .create-account {
     display: flex;
     justify-content: center;
@@ -105,4 +105,10 @@ i {
     margin-left: 5px;
     color: var(--primary-blue);
     text-decoration: none;
+}
+
+.error-message {
+    color: var(--red);
+    font-size: 0.9rem;
+    margin-top: 1rem;
 }
