--- a/TRABALHOWEB/src/style.css
+++ b/TRABALHOWEB/src/style.css
@@ -44,7 +44,6 @@ button {
 
 .login-h1 {
     color: var(--primary-blue);
-    font-weight: bold;
 }
 
 .login-p {
@@ -56,7 +55,6 @@ button {
     color: var(--white);
     width: 100%;
     margin-top: 1rem;
-    font-weight: bold;
 }
 
 .form-control {
@@ -66,13 +64,13 @@ button {
 }
 
 .form-control::placeholder {
-    text-indent: 1.2rem; 
+    text-indent: 1.4rem; 
     font-size: 0.9rem;
 }
 
-i {
+.input-group-text i {
     font-size: 1rem;
-    margin-top: 0.5rem;
+    margin-top: 0.9rem;
     color: var(--gray);
 }
 
